src/test/ui/issues/20000-29999/issue-24036.stderr
error[E0308]: mismatched types
  --> $DIR/issue-24036.rs:3:9
   |
LL |     let mut x = |c| c + 1;
   |                 --------- the expected closure
LL |     x = |c| c + 1;
   |         ^^^^^^^^^ expected closure, found a different closure
   |
   = note: expected closure `[closure@$DIR/issue-24036.rs:2:17: 2:26]`
              found closure `[closure@$DIR/issue-24036.rs:3:9: 3:18]`
   = note: no two closures, even if identical, have the same type
   = help: consider boxing your closure and/or using it as a trait object

error[E0282]: type annotations needed
  --> $DIR/issue-24036.rs:9:15
   |
LL |         1 => |c| c + 1,
   |               ^ consider giving this closure parameter a type

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
